--- a/src/style/theme/components/_bootstrap_select.scss
+++ b/src/style/theme/components/_bootstrap_select.scss
@@ -29,7 +29,7 @@
         &:active,
         &:focus,
         &:hover {
-            color: $black!important;
+            color: $silver!important;
             background-color: $light-248!important;
         }
     }
