--- a/css/main.rtl.css
+++ b/css/main.rtl.css
@@ -16003,7 +16003,7 @@ select.selectpicker {
   }
 }
 .bootstrap-select .dropdown-toggle.btn-light.show, .bootstrap-select .dropdown-toggle.btn-light:active, .bootstrap-select .dropdown-toggle.btn-light:focus, .bootstrap-select .dropdown-toggle.btn-light:hover {
-  color: #3A3A3A !important;
+  color: #AEAEAE !important;
   background-color: #F8F8F8 !important;
 }
 .bootstrap-select .dropdown-toggle.show:after {
