--- a/src/style/theme/_variables.scss
+++ b/src/style/theme/_variables.scss
@@ -76,7 +76,14 @@ $input-font-size: .688rem;
 $input-font-weight: $font-weight-medium;
 $input-color: $black;
 $input-bg: $light-248;
-$input-padding-y: .8rem;
+$input-border-color: $white;
+$input-focus-border-color: $white;
+$input-border-width: 5px;
+$input-focus-width: 5px;
+$input-box-shadow: $box-shadow-md!default;
+$input-focus-box-shadow: $box-shadow-md!default;
+$input-border-radius: $border-radius;
+$input-padding-y: .735rem;
 $input-padding-x: .5rem;
 $input-group-addon-color: $light-gray;
 $input-group-addon-border-color: $light-248;
