--- a/src/style/theme/components/_bootstrap_select.scss
+++ b/src/style/theme/components/_bootstrap_select.scss
@@ -2,12 +2,13 @@
 @import "bootstrap-select/sass/bootstrap-select";
 .bootstrap-select {
     .dropdown-toggle.btn-light {
-        border: none;
+        border: 5px solid $white;
         background-color: $light-248;
-        padding: 1.07rem .5rem;
+        padding: .75rem .5rem;
         font-weight: $font-weight-medium;
         font-size: .688rem;
         color: $black;
+        border-radius: $border-radius;
         &::placeholder {
             font-weight: $font-weight-medium;
             font-style: italic;
@@ -19,11 +20,12 @@
         &:focus {
             outline: none!important;
             outline-offset: none!important;
-            box-shadow: none;
+            box-shadow: $box-shadow-md!important;
         }
         @include media-breakpoint-down(md) {
+            border-width: 4px;
             font-size: .375rem;
-            padding: .438rem .188rem;
+            padding: .188rem;
         }
         &.show,
         &:active,
@@ -31,12 +33,29 @@
         &:hover {
             color: $silver!important;
             background-color: $light-248!important;
+            box-shadow: $box-shadow-md!important;
         }
     }
     .dropdown-toggle {
         &.show {
             &:after {
                 transform: rotate(180deg);
+            }
+        }
+        &::before {
+            content: "";
+            display: block;
+            width: 1rem;
+            height: 1rem;
+            padding-left: calc(1.5em + 1.25rem);
+            background-position: 2px, 16px;
+            background-repeat: no-repeat, no-repeat;
+            background-size: calc(0.75em + 0.8rem) calc(0.75em + 0.8rem);
+            background-image: url("../img/flag.svg"), url("data:image/svg+xml,%3Csvg width='2' height='29' viewBox='0 0 2 29' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.457031' y='0.802979' width='1.50811' height='27.9' rx='0.754054' fill='%23E8E8E8'/%3E%3C/svg%3E%0A");
+            @include media-breakpoint-down(md) {
+                background-size: calc(.5em + .5rem) calc(.5em + .5rem);
+                padding-left: calc(1.5em + .85rem);
+                background-position: 2px, 11px, calc(100% - 2px);
             }
         }
     }
@@ -115,4 +134,11 @@
     @include media-breakpoint-down(md) {
         font-size: .375rem;
     }
+}
+
+.bootstrap-select .dropdown-toggle.btn-light.show,
+.bootstrap-select .dropdown-toggle.btn-light:active,
+.bootstrap-select .dropdown-toggle.btn-light:focus,
+.bootstrap-select .dropdown-toggle.btn-light:hover {
+    box-shadow: none!important;
 }
