--- a/src/style/theme/components/_buttons.scss
+++ b/src/style/theme/components/_buttons.scss
@@ -1,11 +1,11 @@
 .btn-success {
     color: $white;
-    box-shadow: 0px 4px 4px rgba(255, 83, 70, 0.2);
+    box-shadow: $box-shadow;
     min-width: 9.75rem;
     &:focus,
     &:hover,
     &:active {
-        box-shadow: 0px 4px 4px rgba(255, 83, 70, 0.2);
+        box-shadow: $box-shadow;
         color: $white;
         background-color: $green-119;
     }
