--- a/css/main.rtl.css
+++ b/css/main.rtl.css
@@ -15290,9 +15290,9 @@ textarea.form-control-lg {
 }
 @media (max-width: 767.98px) {
   .btn-success {
-    font-size: 0.625rem;
-    padding: 0.375rem 1rem;
-    min-width: 5.875rem;
+    font-size: 0.813rem;
+    padding: 0.86rem 1rem;
+    min-width: 8.75rem;
   }
 }
 
@@ -15317,14 +15317,14 @@ textarea.form-control-lg {
 }
 @media (max-width: 767.98px) {
   .form-control::placeholder {
-    font-size: 0.375rem;
+    font-size: 0.563rem;
   }
 }
 @media (max-width: 767.98px) {
   .form-control {
     border-width: 4px;
     font-size: 0.5rem;
-    padding: 0.32rem 0.188rem;
+    padding: 0.795rem 0.188rem;
   }
 }
 
@@ -15507,7 +15507,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu.dropdown-style ul .dropdown-item.active, .dropdown-menu.dropdown-style ul .dropdown-item:hover, .dropdown-menu.dropdown-style ul .dropdown-item:focus {
   color: #FFFFFF;
-  background-color: #3A3A3A;
+  background-color: #CFE9E2;
   border-radius: 0.125rem;
 }
 @media (max-width: 767.98px) {
@@ -15998,7 +15998,7 @@ select.selectpicker {
 }
 @media (max-width: 767.98px) {
   .bootstrap-select .dropdown-toggle.btn-light::placeholder {
-    font-size: 0.375rem;
+    font-size: 0.563rem;
   }
 }
 .bootstrap-select .dropdown-toggle.btn-light:focus {
@@ -16009,8 +16009,8 @@ select.selectpicker {
 @media (max-width: 767.98px) {
   .bootstrap-select .dropdown-toggle.btn-light {
     border-width: 4px;
-    font-size: 0.375rem;
-    padding: 0.188rem;
+    font-size: 0.563rem;
+    padding: 0.675rem 0.375rem;
   }
 }
 .bootstrap-select .dropdown-toggle.btn-light.show, .bootstrap-select .dropdown-toggle.btn-light:active, .bootstrap-select .dropdown-toggle.btn-light:focus, .bootstrap-select .dropdown-toggle.btn-light:hover {
@@ -16018,8 +16018,12 @@ select.selectpicker {
   background-color: #F8F8F8 !important;
   box-shadow: 0px 3.01622px 3.01622px rgba(0, 0, 0, 0.1) !important;
 }
+.bootstrap-select .dropdown-toggle:after {
+  color: #2D9577;
+}
 .bootstrap-select .dropdown-toggle.show:after {
   transform: rotate(-180deg);
+  color: #2D9577;
 }
 .bootstrap-select .dropdown-toggle::before {
   content: "";
@@ -16063,14 +16067,14 @@ select.selectpicker {
   color: #AEAEAE;
 }
 .bootstrap-select > .dropdown-menu ul .dropdown-item.active, .bootstrap-select > .dropdown-menu ul .dropdown-item:hover, .bootstrap-select > .dropdown-menu ul .dropdown-item:focus {
-  color: #FFFFFF;
-  background-color: #3A3A3A;
+  color: #AEAEAE;
+  background-color: #CFE9E2;
   border-radius: 0.125rem;
 }
 @media (max-width: 767.98px) {
   .bootstrap-select > .dropdown-menu ul .dropdown-item {
-    font-size: 0.5rem;
-    padding: 0.35rem 0.25rem;
+    font-size: 0.75rem;
+    padding: 0.35rem 0.75rem;
   }
 }
 @media (min-width: 1920px) {
@@ -16102,7 +16106,7 @@ select.selectpicker {
 }
 @media (max-width: 767.98px) {
   .bootstrap-select > .dropdown-toggle.bs-placeholder {
-    font-size: 0.375rem;
+    font-size: 0.563rem;
   }
 }
 
@@ -16119,7 +16123,7 @@ select.selectpicker {
   .bootstrap-select > .dropdown-toggle.bs-placeholder:active,
   .bootstrap-select > .dropdown-toggle.bs-placeholder:focus,
   .bootstrap-select > .dropdown-toggle.bs-placeholder:hover {
-    font-size: 0.375rem;
+    font-size: 0.563rem;
   }
 }
 
@@ -16213,7 +16217,7 @@ textarea {
     font-size: 1.375rem !important;
   }
   .fs-4 {
-    font-size: 0.594rem !important;
+    font-size: 0.688rem !important;
   }
   .w-44 {
     width: 1.313rem;
@@ -16255,7 +16259,7 @@ p {
     font-size: 0.875rem;
   }
   p {
-    font-size: 0.75rem;
+    font-size: 0.688rem;
   }
 }
 @media (min-width: 1920px) {
