update modal dialog

--- a/src/style/theme/components/_form-control.scss
+++ b/src/style/theme/components/_form-control.scss
@@ -26,10 +26,13 @@
         }
         &::placeholder {
             font-style: normal;
+            @include media-breakpoint-down(md) {
+                font-size: .625rem;
+            }
         }
         @include media-breakpoint-down(md) {
             padding: .5rem;
-            font-size: .438rem;
+            font-size: .625rem;
         }
     }
 }
